[package]
name = "orch-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
lazy_static = "1.4.0"
alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "68952c0", features = [
    "signers",
    "network",
    "providers",
    "rpc",
    "rpc-client",
    "consensus",
    "signer-wallet",
    "sol-types",
    "eips",
] }
c-kzg = "1.0.0"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
starknet = { version = "0.14.0" }
color-eyre = { version = "0.6.2" }
serde_json = "1.0.115"
num = "0.4.1"
majin-blob = "0.1.3"
majin-blob-core = "0.1.3"
majin-blob-types = "0.1.3"
num-bigint = "0.4.4"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
rayon = "1.10.0"
httpmock = { version = "0.7.0" }
mockall = "0.12.1"
tempfile = "3.10.1"
indexmap = "2.2.6"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "1.0"
rstest = "0.18.2"
num-integer = "0.1.46"
assert_matches = "1.5.0"
